tests/ui/privacy/unnameable_types.stderr
error: struct `PubStruct` is reachable but cannot be named
  --> $DIR/unnameable_types.rs:5:5
   |
LL |     pub struct PubStruct(pub i32);
   |     ^^^^^^^^^^^^^^^^^^^^ reachable at visibility `pub`, but can only be named at visibility `pub(crate)`
   |
note: the lint level is defined here
  --> $DIR/unnameable_types.rs:2:9
   |
LL | #![deny(unnameable_types)]
   |         ^^^^^^^^^^^^^^^^

error: enum `PubE` is reachable but cannot be named
  --> $DIR/unnameable_types.rs:7:5
   |
LL |     pub enum PubE {
   |     ^^^^^^^^^^^^^ reachable at visibility `pub`, but can only be named at visibility `pub(crate)`

error: trait `PubTr` is reachable but cannot be named
  --> $DIR/unnameable_types.rs:11:5
   |
LL |     pub trait PubTr {
   |     ^^^^^^^^^^^^^^^ reachable at visibility `pub`, but can only be named at visibility `pub(crate)`

error: aborting due to 3 previous errors

